@@ -1,3 +1,7 @@
+2003-03-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (checkForRedirection): Handle 307 Temporary Redirect.
+
 2003-02-28  Kevin Kenny  <kennykb@users.sourceforge.net>
 
 	* tkchat.tcl: Added '-force' to a 'namespace import' call
